--- a/Site/.env.sample
+++ b/Site/.env.sample
@@ -1,4 +1,4 @@
-BASE_PROXY_URL=https://qa.plasmodb.org
+BASE_PROXY_URL=https://wbazant.plasmodb.org
 LEGACY_WEB_APP_URL=${BASE_PROXY_URL}/plasmo
 PROJECT_ID=PlasmoDB
 
